# FastAPI_Authorization

./: docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 821c279d9515_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: test_unit_repository_contacts.py
